# fiuber-api-gateway

./: README.md
api/: .env  Dockerfile  pyproject.toml  requirements.txt  requirements2.txt
api/application/: initializer.py
api/application/main/routers/: routs.py
api/application/main/services/: trips_endpoints.py
