[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["marconcz <marconcz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
python-dotenv = "^0.21.0"
PyYAML = "^6.0"
cutelog = "^2.0.7"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
